fix: minor fixes